<resources>
    <string name="app_name">Clock-o-matic</string>
    <string name ="action_undo">Undo</string>
    <string name="action_settings">Settings</string>
    <string name="action_configure_companies">Companies editor</string>
    <string name="action_wipe_data">Delete all data</string>
    <string name="action_about">About</string>

    <string name="error_title">Error</string>



    <!-- TODO: Remove or change this placeholder text -->

    <string name="dialog_wipe_all_are_you_sure">This delete all data, are you sure?</string>



    <!-- checkout: https://developer.android.com/guide/topics/resources/string-resource.html?hl=es-419 -->
    <string name="app_about">
        This app is for keep record of working time,
        you can find source code at Git Hub <a href='https://github.com/joan-esteban/clockomatic'>https://github.com/joan-esteban/clockomatic</a>.
        <br></br>
        \n
        This is just a learning exercise, you can contact me at:
        <b><a href='mailto:joanestebanr@gmail.com'>joanestebanr@gmail.com</a></b>
        \n\n
        <b>Changelog 0.100beta</b>\n
        - It remember last Company used\n
        <br></br>
    </string>
    <string name="app_about_line_2">"         Using <a href="https://github.com/QuadFlask/colorpicker">QuadFlask/colorpicker</a> for color picking (license Apache 2.0):         you can find source code at Git Hub <a href="https://github.com/QuadFlask/colorpicker">https://github.com/QuadFlask/colorpicker</a>         <br />     "</string>
    <string name="action_debug">Debug Menu</string>
    <string name="work_schedule_title">Schedule</string>
    <!-- "?", "Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat" -->
    <string-array name="name_days_short_array">
        <item> </item>
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>

    <string-array name="name_months_short_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="company_editor_name_title">Name</string>
    <string name="company_editor_desc_title">Description</string>
    <string name="company_editor_color_title">Color</string>
    <string name="label_company">Company</string>


</resources>
