<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.mainactivity.MainActivity">

    <item
        android:id="@+id/action_undo"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/action_undo" />

    <item
    android:id="@+id/action_settings"
    android:icon="@mipmap/ic_launcher"
    android:orderInCategory="100"
    android:title="@string/action_settings" />
    <item
        android:id="@+id/action_configure_companies"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="100"
        android:title="@string/action_configure_companies" />
    <item
        android:id="@+id/action_wipe_data"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="101"
        android:title="@string/action_wipe_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="101"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:icon="@android:drawable/ic_lock_lock"
        android:orderInCategory="100"
        android:title="@string/action_debug"
        android:visible="false"
        app:showAsAction="never" />

</menu>
